# lib/api-spec/openapi.yaml
@@ -323,6 +323,8 @@ components:
           type: ["string", "null"]
         service:
           type: ["string", "null"]
+        provider:
+          type: ["string", "null"]
         status:
           type: string
           enum: [active, inactive]
@@ -355,6 +357,8 @@ components:
           type: string
         service:
           type: string
+        provider:
+          type: string
 
     ScriptUpdate:
       type: object
@@ -367,6 +371,8 @@ components:
         code:
           type: string
         service:
+          type: string
+        provider:
           type: string
         status:
           type: string
